--- a/FormApps/CarReportSystem/CarReportSystem.csproj
+++ b/FormApps/CarReportSystem/CarReportSystem.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="infosys202314DataSet.cs">
+      <DependentUpon>infosys202314DataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="infosys202314DataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
